[package]
authors = ["g0h4n <g0h4n_0@protonmail.com>"]
name = "rusthound-ce"
description = "Active Directory data collector for Bloodhound Community Edition written in rust."
keywords = ["bloodhound", "pentest", "ldap", "tokio", "async"]
repository = "https://github.com/g0h4n/RustHound-CE"
homepage = "https://github.com/g0h4n/RustHound-CE"
documentation = "https://docs.rs/rusthound-ce/"
version = "2.4.7"
edition = "2021"
license = "MIT"
readme = "README.md"
rust-version = "1.85"

[dependencies]
tokio = "1.42.0"
clap = "4.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
nom7 = { version = "8.0.0", package = "nom" }
colored = "3.1.1"
chrono = "0.4.44"
bitflags = "2.4.1"
env_logger = "0.11.10"
log = "0.4"
indicatif = "0.18.4"
x509-parser = "0.18.1"
trust-dns-resolver = "0.23"
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }
rpassword = "7.2"
ldap3 = { version = "0.11.5", default-features = false }
winreg = { version = "0.56.0", optional = true }
sha1 = "0.10.0"
regex = "1"
once_cell = "1.19"
oxicode = { version = "0.2.1", features = ["derive"] }
obfstr = "0.4.1"
phf = { version = "0.13.1", features = ["macros"] }
hex = "0.4.3"

[features]
noargs = ["winreg"] # Only available for Windows
nogssapi = ["ldap3/tls-rustls"] # Used for linux_musl armv7 and macos compilation
default = ["ldap3/tls-rustls", "ldap3/gssapi"]

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
